# JivanLog

./: .gitignore  CMakeLists.txt
cmake/: utils.cmake
code/: log.cpp  mutex.cpp  util.cpp
inlcude/: log.h  mutex.h  singleton.h  util.h
tests/: test_log.cpp
